--- a/music.css
+++ b/music.css
@@ -429,6 +429,10 @@ li.over { border-top: 1px dotted #ef6c00 }
 #share:before { content: "\f1ad" }
 #stop:before, #stopplayback:before { content: "\f1ef" }
 
+#volume-down:before { content: "\f176" }
+#volume-up:before { content: "\f199" }
+
+
 .clear:before { content: "\f217" }
 .copied:before { content: "\f129" }
 .download:before { content: "\f143" }
